--- a/MyApps/MyApps.Droid/Properties/AndroidManifest.xml
+++ b/MyApps/MyApps.Droid/Properties/AndroidManifest.xml
@@ -7,8 +7,9 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="MyApps" android:largeHeap="true">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAkjbehErcb3vj81LKFoxta2sKxzyU7HZc" />
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCsI3Xgqg7NXUQs48wmWDLyY6IBUTrZLSU" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
 </manifest>
