--- a/MyApps/MyApps/MyApps.csproj
+++ b/MyApps/MyApps/MyApps.csproj
@@ -64,14 +64,20 @@
     <Compile Include="SignUpPage.xaml.cs">
       <DependentUpon>SignUpPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewsModel\Constants.cs" />
+    <Compile Include="ViewsModel\LoginPageCS.cs" />
     <Compile Include="ViewsModel\LoginViewModel.cs" />
-    <Compile Include="ViewsModel\Offres.cs" />
+    <Compile Include="ViewsModel\LogOutCS.cs" />
+    <Compile Include="ViewsModel\Plate.cs" />
     <Compile Include="ViewsModel\RegisterViewModel.cs" />
+    <Compile Include="ViewsModel\Reservation.cs" />
+    <Compile Include="ViewsModel\Speciality.cs" />
     <Compile Include="ViewsModel\Toast.cs" />
     <Compile Include="ViewPage.xaml.cs">
       <DependentUpon>ViewPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewsModel\Restaurant.cs" />
+    <Compile Include="ViewsModel\User.cs" />
     <Compile Include="Views\MapPage.xaml.cs">
       <DependentUpon>MapPage.xaml</DependentUpon>
     </Compile>
