--- a/MyApps/MyApps.Droid/packages.config
+++ b/MyApps/MyApps.Droid/packages.config
@@ -12,6 +12,7 @@
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid70" />
   <package id="Xam.Plugins.Settings" version="2.5.8" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid70" />
