--- a/MyApps/MyApps.UWP/MyApps.UWP.csproj
+++ b/MyApps/MyApps.UWP/MyApps.UWP.csproj
@@ -110,9 +110,35 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="all.png" />
-    <Content Include="Assets\Splash1.png" />
+    <Content Include="Assets\BadgeLogo.scale-100.png" />
+    <Content Include="Assets\BadgeLogo.scale-125.png" />
+    <Content Include="Assets\BadgeLogo.scale-150.png" />
+    <Content Include="Assets\BadgeLogo.scale-200.png" />
+    <Content Include="Assets\BadgeLogo.scale-400.png" />
+    <Content Include="Assets\first100.png" />
+    <Content Include="Assets\first125.png" />
+    <Content Include="Assets\first200 .png" />
+    <Content Include="Assets\first400.png" />
+    <Content Include="Assets\firstt150.png" />
+    <Content Include="Assets\logo100.png" />
+    <Content Include="Assets\logo125.png" />
+    <Content Include="Assets\logo150.png" />
+    <Content Include="Assets\logo50.png" />
     <Content Include="Assets\Splash1.scale-100.png" />
+    <Content Include="Assets\Splash1.scale-125.png" />
+    <Content Include="Assets\Splash1.scale-150.png" />
     <Content Include="Assets\Splash1.scale-200.png" />
+    <Content Include="Assets\Splash1.scale-400.png" />
+    <Content Include="Assets\Square150x150Logo.scale-200.png" />
+    <Content Include="Assets\Square71x71Logo.scale-100.png" />
+    <Content Include="Assets\Square71x71Logo.scale-125.png" />
+    <Content Include="Assets\Square71x71Logo.scale-150.png" />
+    <Content Include="Assets\Square71x71Logo.scale-200.png" />
+    <Content Include="Assets\Square71x71Logo.scale-400.png" />
+    <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\StoreLogo.scale-200.png" />
+    <Content Include="Assets\StoreLogo.scale-400.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="bahdja.png" />
     <Content Include="bg.png" />
     <AndroidResource Include="iconEmail.png" />
@@ -138,9 +164,9 @@
     <Content Include="house.png" />
     <Content Include="ic_btn_search.png" />
     <Content Include="logo.png" />
-    <AndroidResource Include="marker1.png" />
     <Content Include="logout.png" />
     <Content Include="machawi.png" />
+    <Content Include="marker1.png" />
     <Content Include="mediterraneen.png" />
     <Content Include="Mega.png" />
     <Content Include="menu.png" />
@@ -149,14 +175,9 @@
     <Content Include="pizaa_col.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <AndroidResource Include="star_outline.png" />
-    <AndroidResource Include="star_selected.png" />
     <Content Include="Restaurant.png" />
     <Content Include="sandwish.png" />
     <Content Include="Setting.png" />
@@ -167,7 +188,9 @@
     <Content Include="special_panache.png" />
     <Content Include="special_poulet.png" />
     <Content Include="special_viande.png" />
-    <Content Include="Splash1.jpg" />
+    <Content Include="Splash1.png" />
+    <Content Include="star_outline.png" />
+    <Content Include="star_selected.png" />
     <Content Include="Tacos_panache.png" />
     <Content Include="tacos_poulet.png" />
     <Content Include="tacos_viande.png" />
