--- a/MyAppAPI/MyAppAPI/Web.config
+++ b/MyAppAPI/MyAppAPI/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyAppAPI-20170508084043.mdf;Initial Catalog=aspnet-MyAppAPI-20170508084043;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MyAppAPIContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MyAppAPIContext-20170508204927; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MyAppAPIContext-20170508204927.mdf" providerName="System.Data.SqlClient" />
+    <add name="MyAppAPIContext"   connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|MyAppAPIContext-20170508204927.mdf;Initial Catalog=MyAppAPIContext-20170508204927;Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings />
   <!--
